force-app/main/default/objects/UASB__c/UASB__c.object-meta.xml
<CustomObject>
    <description n1:nil="true"/>
    <label>Utility Account Subscription Bill</label>
    <nameField>
        
        <displayFormat>UASB-{0000000}</displayFormat>
        
        <label>Utility Account Subscription Bill Name</label>
        
        
        <type>AutoNumber</type>
        
    </nameField>
    <pluralLabel>Utility Account Subscription Bills</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>