force-app/main/default/objects/UASB__c/fields/Above_NM_Rate_Floor__c.field-meta.xml
<CustomField>
    <fullName>Above_NM_Rate_Floor__c</fullName>
    <formula>IF(Subscription_Production_kWh__c=0,True, IF((Bill_Value__c/Subscription_Production_kWh__c)&gt;NM_Rate_Floor__c,True, False))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Above NM Rate Floor</label>
    <type>Checkbox</type>
</CustomField>