force-app/main/default/objects/UASB__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Utility Account Subscription Bills (Account)</relationshipLabel>
    <relationshipName>Utility_Account_Subscription_Bills1</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>