force-app/main/default/objects/UASB__c/fields/Account_Bill_ID__c.field-meta.xml
<CustomField>
    <fullName>Account_Bill_ID__c</fullName>
    <formula>System_Bill__r.Account_Bill__r.Id</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Bill ID</label>
    <type>Text</type>
</CustomField>