force-app/main/default/objects/UASB__c/fields/Bill_Credit_Value__c.field-meta.xml
<CustomField>
    <fullName>Bill_Credit_Value__c</fullName>
    <formula>ROUND((NMC_Rate__c - 0.02) * Subscription_Production_kWh__c,2)+ROUND(0.02 * Subscription_Production_kWh__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Bill Credit Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>