force-app/main/default/objects/UASB__c/fields/Bill_Value__c.field-meta.xml
<CustomField>
    <fullName>Bill_Value__c</fullName>
    <formula>IF(ISBLANK(NMC_Discount__c), Net_Metering_Credits_Allocated__c*0.90, Net_Metering_Credits_Allocated__c*(1- NMC_Discount__c))</formula>
    <label>Discounted (%) Bill Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>