force-app/main/default/objects/UASB__c/fields/Billing_Method__c.field-meta.xml
<CustomField>
    <fullName>Billing_Method__c</fullName>
    <inlineHelpText>Blank unless the UASB is billed via UCB.</inlineHelpText>
    <label>Billing Method</label>
    <type>Picklist</type>
    <valueSet>
        
            <restricted>true</restricted>
        
            <valueSetDefinition>
            
            
                <value>
                
                    <fullName>UCB</fullName>
                
                
                    <label>UCB</label>
                
                </value>
            
            </valueSetDefinition>
        
        </valueSet>
</CustomField>