force-app/main/default/objects/UASB__c/fields/Billing_Period_End_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period_End_Date__c</fullName>
    <inlineHelpText>From the production update, the host account billing period end date</inlineHelpText>
    <label>Billing Period End Date</label>
    <type>Date</type>
</CustomField>