force-app/main/default/objects/UASB__c/fields/Billing_Period_Start_Date__c.field-meta.xml
<CustomField>
    <fullName>Billing_Period_Start_Date__c</fullName>
    <inlineHelpText>From Production Update, the beginning of the related host account billing period</inlineHelpText>
    <label>Billing Period Start Date</label>
    <type>Date</type>
</CustomField>