force-app/main/default/objects/UASB__c/fields/Calculated_Credits__c.field-meta.xml
<CustomField>
    <fullName>Calculated_Credits__c</fullName>
    <label>Calculated Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>