force-app/main/default/objects/UASB__c/fields/CDG_Sponsor_Payment__c.field-meta.xml
<CustomField>
    <fullName>CDG_Sponsor_Payment__c</fullName>
    <label>CDG Sponsor Payment</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>