force-app/main/default/objects/UASB__c/fields/CDG_Subscription_Fee__c.field-meta.xml
<CustomField>
    <fullName>CDG_Subscription_Fee__c</fullName>
    <label>CDG Subscription Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>