force-app/main/default/objects/UASB__c/fields/Client__c.field-meta.xml
<CustomField>
    <fullName>Client__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Stamped with UAS.Opp.SSS.Entity.Client on insert</inlineHelpText>
    <label>Client</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Utility Account Subscription Bills</relationshipLabel>
    <relationshipName>Utility_Account_Subscription_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>