force-app/main/default/objects/UASB__c/fields/Client_Account_Number__c.field-meta.xml
<CustomField>
    <fullName>Client_Account_Number__c</fullName>
    <formula>Client__r.Account_Number__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>As we retire system bills, used as a switch between referencing System Bill Client v. UASB Client</inlineHelpText>
    <label>Client Account Number</label>
    <type>Text</type>
</CustomField>