force-app/main/default/objects/UASB__c/fields/Credits_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Credits_Allocated__c</fullName>
    <label>Credits Allocated</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>