force-app/main/default/objects/UASB__c/fields/Credits_on_Bill_Period__c.field-meta.xml
<CustomField>
    <fullName>Credits_on_Bill_Period__c</fullName>
    <formula>CASE( 
MONTH(Billing_Period_Start_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
&quot;December&quot;
)&amp;&quot; - &quot;&amp; 
CASE( 
MONTH(Billing_Period_End_Date__c),
1, &quot;January&quot;,
2, &quot;February&quot;,
3, &quot;March&quot;,
4, &quot;April&quot;,
5, &quot;May&quot;,
6, &quot;June&quot;,
7, &quot;July&quot;,
8, &quot;August&quot;,
9, &quot;September&quot;,
10, &quot;October&quot;,
11, &quot;November&quot;,
&quot;December&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Credits on Bill Period</label>
    <type>Text</type>
</CustomField>