force-app/main/default/objects/UASB__c/fields/CS_Billing_Log__c.field-meta.xml
<CustomField>
    <fullName>CS_Billing_Log__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>CS Billing Log</label>
    <referenceTo>Utility_Account_Bill__c</referenceTo>
    <relationshipLabel>Utility Account Subscription Bills</relationshipLabel>
    <relationshipName>Utility_Account_Subscription_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>