force-app/main/default/objects/UASB__c/fields/Customer_Subscription_KW_DC__c.field-meta.xml
<CustomField>
    <fullName>Customer_Subscription_KW_DC__c</fullName>
    <label>Customer Subscription (KW DC)</label>
    <precision>10</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>