force-app/main/default/objects/UASB__c/fields/Days_Late__c.field-meta.xml
<CustomField>
    <fullName>Days_Late__c</fullName>
    <formula>System_Bill__r.Days_Past_Due__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Days Late</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>