force-app/main/default/objects/UASB__c/fields/Discounted_Bill__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Bill__c</fullName>
    <formula>IF(ISPICKVAL( Pricing_Structure__c, &quot;Use Solar Electric Rate&quot;),Solar_Share_Rate_Bill_Value__c, IF(Above_NM_Rate_Floor__c,Bill_Value__c,Floor_Price_Bill_Value__c))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Discounted Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>