force-app/main/default/objects/UASB__c/fields/Discounted_Utility_Bill__c.field-meta.xml
<CustomField>
    <fullName>Discounted_Utility_Bill__c</fullName>
    <label>Discounted Utility Bill</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>