force-app/main/default/objects/UASB__c/fields/Early_Removal__c.field-meta.xml
<CustomField>
    <fullName>Early_Removal__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>See Early Removal on the UAS object. Set by the Transfer QC process.</inlineHelpText>
    <label>Early Removal</label>
    <type>Checkbox</type>
</CustomField>