force-app/main/default/objects/UASB__c/fields/Effective_Net_Metering_Rate__c.field-meta.xml
<CustomField>
    <fullName>Effective_Net_Metering_Rate__c</fullName>
    <formula>Net_Metering_Credits_Allocated__c / Subscription_Production_kWh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Effective Net Metering Rate</label>
    <precision>18</precision>
    <scale>6</scale>
    <type>Number</type>
</CustomField>