force-app/main/default/objects/UASB__c/fields/Ending_Banked_Credits__c.field-meta.xml
<CustomField>
    <fullName>Ending_Banked_Credits__c</fullName>
    <label>Ending Banked Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>