force-app/main/default/objects/UASB__c/fields/Externally_Serviced__c.field-meta.xml
<CustomField>
    <fullName>Externally_Serviced__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>If checked, UASB is billed by RadianGen. Bill will NOT be sent to customer</inlineHelpText>
    <label>Externally Serviced</label>
    <type>Checkbox</type>
</CustomField>