force-app/main/default/objects/UASB__c/fields/Floor_Price_Bill_Value__c.field-meta.xml
<CustomField>
    <fullName>Floor_Price_Bill_Value__c</fullName>
    <formula>Subscription_Production_kWh__c * NM_Rate_Floor__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Floor Price Bill Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>