force-app/main/default/objects/UASB__c/fields/Net_Member_Credits__c.field-meta.xml
<CustomField>
    <fullName>Net_Member_Credits__c</fullName>
    <label>Net Member Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>