force-app/main/default/objects/UASB__c/fields/Net_Metering_Credits_Allocated__c.field-meta.xml
<CustomField>
    <fullName>Net_Metering_Credits_Allocated__c</fullName>
    <formula>Credits_Allocated__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Net Metering Credits Allocated</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>