force-app/main/default/objects/UASB__c/fields/New_available_credits__c.field-meta.xml
<CustomField>
    <fullName>New_available_credits__c</fullName>
    <label>New available credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>