force-app/main/default/objects/UASB__c/fields/NM_Rate_Floor__c.field-meta.xml
<CustomField>
    <fullName>NM_Rate_Floor__c</fullName>
    <label>NM Rate Floor</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>