force-app/main/default/objects/UASB__c/fields/NMC_Discount__c.field-meta.xml
<CustomField>
    <fullName>NMC_Discount__c</fullName>
    <defaultValue>10</defaultValue>
    <label>NMC Discount</label>
    <precision>16</precision>
    <scale>4</scale>
    <type>Percent</type>
</CustomField>