force-app/main/default/objects/UASB__c/fields/NMC_Rate__c.field-meta.xml
<CustomField>
    <fullName>NMC_Rate__c</fullName>
    <label>NMC Rate</label>
    <precision>9</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>