force-app/main/default/objects/UASB__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>Utility Account Subscription Bills</relationshipLabel>
    <relationshipName>Utility_Account_Subscription_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>