force-app/main/default/objects/UASB__c/fields/Percent_of_Total_Account_Bill__c.field-meta.xml
<CustomField>
    <fullName>Percent_of_Total_Account_Bill__c</fullName>
    <formula>Discounted_Bill__c/ CS_Billing_Log__r.Account_Bill__r.Due_This_Month__c</formula>
    <label>Percent of Total Account Bill</label>
    <precision>18</precision>
    <scale>8</scale>
    <type>Number</type>
</CustomField>