force-app/main/default/objects/UASB__c/fields/PreGen_IsPreGen__c.field-meta.xml
<CustomField>
    <fullName>PreGen_IsPreGen__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Indicates that the UAS was finaled when the UASB was generated. Used by the TransferSheetQC service to show finaled accounts.</inlineHelpText>
    <label>Finaled</label>
    <type>Checkbox</type>
</CustomField>