force-app/main/default/objects/UASB__c/fields/PreGen_Name_on_Account__c.field-meta.xml
<CustomField>
    <fullName>PreGen_Name_on_Account__c</fullName>
    <inlineHelpText>Used for Pre-generation of Bills Table Only</inlineHelpText>
    <label>PreGen Name on Account</label>
    <length>50</length>
    <type>Text</type>
</CustomField>