force-app/main/default/objects/UASB__c/fields/PreGen_Utility_Acct__c.field-meta.xml
<CustomField>
    <fullName>PreGen_Utility_Acct__c</fullName>
    <inlineHelpText>Used for Pre-generation of Bills Table Only</inlineHelpText>
    <label>PreGen Utility Acct #</label>
    <length>50</length>
    <type>Text</type>
</CustomField>