force-app/main/default/objects/UASB__c/fields/Pricing_Structure__c.field-meta.xml
<CustomField>
    <fullName>Pricing_Structure__c</fullName>
    <label>Pricing Structure</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Use Solar Electric Rate</fullName>
            </value>
            <value>
                <fullName>Fixed % Discount</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>