force-app/main/default/objects/UASB__c/fields/Production_Update__c.field-meta.xml
<CustomField>
    <fullName>Production_Update__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Production Update</label>
    <referenceTo>Energy_Usage_Update__c</referenceTo>
    <relationshipLabel>Utility Account Subscription Bills</relationshipLabel>
    <relationshipName>Utility_Account_Subscription_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>