force-app/main/default/objects/UASB__c/fields/Ready_For_Production_Detail__c.field-meta.xml
<CustomField>
    <fullName>Ready_For_Production_Detail__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Only externally serviced UASBs get marked with this checkbox on insertion, to be caught by production detail creation scheduled job</inlineHelpText>
    <label>Ready For Production Detail</label>
    <type>Checkbox</type>
</CustomField>