force-app/main/default/objects/UASB__c/fields/Satellite_Bill_Date__c.field-meta.xml
<CustomField>
    <fullName>Satellite_Bill_Date__c</fullName>
    <description>Date of subscriber&apos;s utility bill to which credits were applied</description>
    <inlineHelpText>Date of subscriber&apos;s utility bill to which credits were applied</inlineHelpText>
    <label>Satellite Bill Date</label>
    <type>Date</type>
</CustomField>