force-app/main/default/objects/UASB__c/fields/Satellite_Charges__c.field-meta.xml
<CustomField>
    <fullName>Satellite_Charges__c</fullName>
    <label>Satellite Charges</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>