force-app/main/default/objects/UASB__c/fields/Savings__c.field-meta.xml
<CustomField>
    <fullName>Savings__c</fullName>
    <formula>ROUND(Net_Metering_Credits_Allocated__c,2) - ROUND(Discounted_Bill__c,2)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Savings</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>