force-app/main/default/objects/UASB__c/fields/Schedule_Z_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Schedule_Z_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The Allocation Schedule Subscription this bill was created with.</description>
    <label>Allocation Schedule Subscription</label>
    <referenceTo>Schedule_Z_Subscription__c</referenceTo>
    <relationshipLabel>Utility Account Subscription Bills</relationshipLabel>
    <relationshipName>Utility_Account_Subscription_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>