force-app/main/default/objects/UASB__c/fields/Share_of_System__c.field-meta.xml
<CustomField>
    <fullName>Share_of_System__c</fullName>
    <label>Share of System</label>
    <precision>7</precision>
    <scale>4</scale>
    <type>Number</type>
</CustomField>