force-app/main/default/objects/UASB__c/fields/Size_off_NMCs__c.field-meta.xml
<CustomField>
    <fullName>Size_off_NMCs__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Size off NMCs</label>
    <type>Checkbox</type>
</CustomField>