force-app/main/default/objects/UASB__c/fields/Solar_Electricity_Rate__c.field-meta.xml
<CustomField>
    <fullName>Solar_Electricity_Rate__c</fullName>
    <label>Solar Electricity Rate</label>
    <precision>18</precision>
    <scale>5</scale>
    <type>Number</type>
</CustomField>