force-app/main/default/objects/UASB__c/fields/Solar_Share_Rate_Bill_Value__c.field-meta.xml
<CustomField>
    <fullName>Solar_Share_Rate_Bill_Value__c</fullName>
    <formula>Solar_Electricity_Rate__c *  Subscription_Production_kWh__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Solar Share Rate Bill Value</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>