force-app/main/default/objects/UASB__c/fields/Starting_Banked_Credits__c.field-meta.xml
<CustomField>
    <fullName>Starting_Banked_Credits__c</fullName>
    <label>Starting Banked Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>