force-app/main/default/objects/UASB__c/fields/Subscription_Production_kWh__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Production_kWh__c</fullName>
    <formula>Subscription_Production_kWh_Static__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Subscription Production (kWh)</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>