force-app/main/default/objects/UASB__c/fields/Subscription_Production_kWh_Static__c.field-meta.xml
<CustomField>
    <fullName>Subscription_Production_kWh_Static__c</fullName>
    <label>Subscription Production (kWh) Static</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>