force-app/main/default/objects/UASB__c/fields/System_Bill__c.field-meta.xml
<CustomField>
    <fullName>System_Bill__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>System Bill</label>
    <referenceTo>System_Bill__c</referenceTo>
    <relationshipLabel>Utility Account Subscription Bills</relationshipLabel>
    <relationshipName>Utility_Account_Subscription_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>