force-app/main/default/objects/UASB__c/fields/System_Share__c.field-meta.xml
<CustomField>
    <fullName>System_Share__c</fullName>
    <formula>Customer_Subscription_KW_DC__c / Total_System_Size_kW_DC__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>System Share</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>