force-app/main/default/objects/UASB__c/fields/Total_Available_Credits__c.field-meta.xml
<CustomField>
    <fullName>Total_Available_Credits__c</fullName>
    <label>Total Available Credits</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>