force-app/main/default/objects/UASB__c/fields/Total_System_NMCs__c.field-meta.xml
<CustomField>
    <fullName>Total_System_NMCs__c</fullName>
    <label>Total System NMCs</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>