force-app/main/default/objects/UASB__c/fields/Total_System_Production_kWh__c.field-meta.xml
<CustomField>
    <fullName>Total_System_Production_kWh__c</fullName>
    <label>Total System Production (kWh)</label>
    <precision>12</precision>
    <scale>2</scale>
    <type>Number</type>
</CustomField>