force-app/main/default/objects/UASB__c/fields/Transfer__c.field-meta.xml
<CustomField>
    <fullName>Transfer__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Transfer</label>
    <referenceTo>Transfer__c</referenceTo>
    <relationshipLabel>Utility Account Subscription Bills</relationshipLabel>
    <relationshipName>Utility_Account_Subscription_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>