force-app/main/default/objects/UASB__c/fields/Transfer_Sheet_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Transfer_Sheet_Resolution__c</fullName>
    <inlineHelpText>On the transfer sheet QC screen, the value that was selected for &quot;Resolution&quot;</inlineHelpText>
    <label>Transfer Sheet Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>UseUtility</fullName>
            </value>
            <value>
                <fullName>UseSalesforce</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>