force-app/main/default/objects/UASB__c/fields/Utility_Account_Subscription__c.field-meta.xml
<CustomField>
    <fullName>Utility_Account_Subscription__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Utility Account Subscription</label>
    <referenceTo>Utility_Account_Subscription__c</referenceTo>
    <relationshipLabel>Utility Account Subscription Bills</relationshipLabel>
    <relationshipName>Utility_Account_Subscription_Bills</relationshipName>
    <type>Lookup</type>
</CustomField>