force-app/main/default/objects/UASB__c/fields/Utility_Admin_Fee__c.field-meta.xml
<CustomField>
    <fullName>Utility_Admin_Fee__c</fullName>
    <label>Utility Admin Fee</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>