force-app/main/default/objects/UASB__c/fields/Zuora_Id__c.field-meta.xml
<CustomField>
    <fullName>Zuora_Id__c</fullName>
    <label>Zuora Id</label>
    <length>32</length>
    <type>Text</type>
</CustomField>