force-app/main/default/objects/UASB__c/validationRules/UASB_Cannot_Be_Edited_After_Published.validationRule-meta.xml
<ValidationRule>
    <fullName>UASB_Cannot_Be_Edited_After_Published</fullName>
    <active>false</active>
    <description>UASB Cannot Be Edited after Bill is Pushed to Zuora</description>
    <errorConditionFormula>AND(
NOT(ISBLANK(Zuora_Id__c)),
NOT(ISCHANGED(Account__c)),
NOT(ISCHANGED(Transfer__c))
)</errorConditionFormula>
    <errorMessage>UASB Cannot Be Edited after Bill is Pushed to Zuora</errorMessage>
</ValidationRule>