force-app/main/default/objects/UASB__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>System_Bill__c</columns>
    <columns>CREATED_DATE</columns>
    <columns>Shared_Solar_System__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>